# AppPluginBundle123

./: CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
plugins/bundlePlugABC/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
